# nixos-configs

./: .envrc  LICENSE  README.md  TODO.md  flake.nix  package-lock.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: delete-branch-on-close.yml  flake-check.yml  fmt.yml  iso.yml  iso1.yml_backup  npins.yml  update-flake.yml
disko/: README.md
disko/btrfs-only-root-subvolume/: default.nix
disko/luks-btrfs-subvolumes/: default.nix
flake-parts/: args.nix  default.nix  iso-images.nix  keys.nix  live-media.nix  treefmt.nix
flake-parts/default/: default.nix
flake-parts/git-hooks/: default.nix
flake-parts/lib/: aliases.nix  builders.nix  ci.nix  default.nix  firewall.nix  fs.nix  hardware.nix  secrets.nix  themes.nix  validators.nix  xdg.nix
flake-parts/npins/: sources.json
flake-parts/shell/: commands.nix  default.nix  env.nix  packages.nix
flake-parts/templates/: README.md  default.nix
flake-parts/templates/ml/pybind11-starter-kit/: CMakeLists.txt  flake.nix  setup.py
flake-parts/templates/ml/pybind11-starter-kit/nix/: default.nix  dev-shell.nix
flake-parts/templates/ml/pybind11-starter-kit/src/: starterpp.cc
homes/shared/: default.nix  shared.nix
machines/: default.nix  home.nix
machines/iso/: default.nix  home.nix  nixos.nix
machines/leto/: system.nix
machines/messier/: colors.nix  default.nix  graphical.nix  home.nix  module.nix
machines/milkyway/: default.nix
machines/nebula/: default.nix
machines/triangulum/: default.nix  overrides.nix  system.nix
modules/exclusive/: default.nix
modules/shared/: default.nix  fs.nix
options/: default.nix
options/device/: hardware.nix
options/home/: default.nix  immutable.nix
options/style/: default.nix
options/system/: default.nix  encryption.nix
options/theme/: colors.nix  default.nix  themes.nix
secrets/: secrets.nix
secrets/authelia/: jwt_secret.age  lldap_user_pass.age  postgre_password.age  session_secret.age  smtp_pass.age  storage_encryption_key.age
secrets/client/: email.age  tailscale.age  wg.age
secrets/lldap/: jwt_secret.age  (+3 more)
(+694 files in other folders)
